--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    </div>
+    <div class="header">
+        <div class="logo">
+            <h1><a class="logo-text" href="#">RN-DEK FARAH</a></h1>
+        </div>
+        <nav>
+        <ul>
+            <li> <a href="/home.html">home</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">about</a></li>
+            <li><a class="contact-btn" href="/OGAYSIS.html">OGAYSIS</a></li>
+        </ul>
+    </nav>
+    </div>
     <div class="container">
-        <h1>Natiijada Imtixaanka<br> course: Ethics</h1>
+        <h1 class="hor">Natiijada Imtixaanka<br> course: Ethics</h1>
+       
         <form id="resultForm">
             <label for="studentID">Geli Lambarka Diiwaangalinta:</label>
             <input type="text" id="studentID" name="studentID" required>
