--- a/OGAYSIS.html
+++ b/OGAYSIS.html
@@ -22,7 +22,7 @@
 <div class="s1">
     <div class="og1">
         <h2 class="ciwan">Ardada an qaadan "ID"</h2>
-        <div class="text">dhaman ardada aan qaadan 'ID' dhibcohoda<br>waxay u eegi donan qaab offline ah</div>
+        <div class="text">dhaman ardada aan qaadan 'ID' dhibcohoda<br>waxay ku eegi ID ku meel-gaadh ah</div>
     </div>
     <div class="og2">
 <h2 class="ciwan">Ardada ay dhibcaha qaar <br> ka maqanyihin sida assignment</h2>
