--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     </div>
     <div class="header">
         <div class="logo">
-            <img src="/images/an.jpg" alt="a" width="130px"  height="150px">
+            <img src="an.jpg" alt="a" width="130px"  height="150px">
             <h1><a class="logo-text" href="#">RN-DEK FARAH</a></h1>
             <div class="qor">
-                <h1>ku soo dhawoow website kayga gaarka ah</h1>
+                
             </div>
         </div>
-        <nav>
-        <ul>
-            <li> <a href="home.html">home</a></li>
-            <li><a href="services.html">services</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="OGAYSIS.html">OGAYSIS</a></li>
-        </ul>
-    </nav>
+        <div class="navyada"> <nav>
+            <ul>
+                <li> <a href="home.html">home</a></li>
+                <li><a href="services.html">services</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="OGAYSIS.html">OGAYSIS</a></li>
+            </ul>
+        </nav></div>
+       
     </div>
     <div class="container">
         <h1 class="hor">Natiijada Imtixaanka<br> course: Ethics</h1>
