--- a/services.html
+++ b/services.html
@@ -11,18 +11,20 @@
         <div class="magac">
             <h1>Darajo</h1>
         </div>
-        <nav>
+        <div class="snav">
+             <nav>
             <ul>
                 <li> <a href="home.html">home</a></li>
                 <li><a href="services.html">services</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="OGAYSIS.html">OGAYSIS</a></li>
             </ul>
-        </nav>
+        </nav></div>
+       
     </div>
 <div class="info">
     <div class="l1">
-        <img src="/images/ethics.jpg" alt="s" width="400px" height="400px">     
+        <img src="ethics.jpg" alt="s" width="400px" height="400px">     
     
     </div>
     <div class="l2">
@@ -31,13 +33,13 @@
     </div>
 </div>
     <div class="l3">
-        <img src="/images/fund.jpg" alt="f" width="400px" height="400px">
+        <img src="fund.jpg" alt="f" width="400px" height="400px">
     <div class="l4">
         <h2>adeega waxbarshada onilenka ah</h2> waxaan bilabaynaa dhawaan haduu alle idmo inaan barteena ku soo gudbino casharo dhamaystiran ooo kubaxa luuqado kala duwan waxana ku bilaabi doonaa culuunta caafimaaadka waxana ku sii daa xigsiin doona culuunta kale ee arimaha bulshada
     </div>
 </div>
     <div class="l5">
-        <img src="/images/phar.jpg" alt="v" width="400px" height="400px">
+        <img src="phar.jpg" alt="v" width="400px" height="400px">
 
     <div class="l6">
         <h2>adeega diyaarka ah</h2>
