--- a/OGAYSIS.html
+++ b/OGAYSIS.html
@@ -8,16 +8,17 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="logo">RN-dek farah</div>
-        <nav>
+    <div class="headerka">
+        <div class="rndek">RN-dek farah</div>
+        <div class="nav">   <nav>
             <ul>
                 <li><a href="">home</a></li>
                 <li><a href="">about</a></li>
-                <li><a href="">contac</a></li>
+                <li><a href="">contact</a></li>
                 <li><a href="">services</a></li>
             </ul>
-        </nav>
+        </nav></div>
+     
     </div>
 <div class="s1">
     <div class="og1">
