--- a/about.html
+++ b/about.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About Us</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <div class="santuuqa-guud">
-        <h1 class="line2">bogani waa mid loogu tala galay in ardayda clinical first year ay dhibcohooda ka fiirsadaan</h1>
-       
-<h2 class="line2">waxaa website kan sameeyay mid kamida barayasha ka hawlgala jaamacada horn laanteeda degmada jarati</h2>
-    
-   <div class="xiriir">
-    <h4>kala xiriir ciwaanada hoos ku xusan</h4>
-    <div class="ciwaano">
-        <email:-> email:- deeqidil@gmail.com</email:-><br>
-        <facebook> facebook:-deeq darajo</facebook><br>
-        <whatsApp>whatsApp:- 0928003838</whatsApp><br>
+    <div class="about-container">
+        <div class="about-box">
+            <h2>WAR-BIXIN KOOBAN</h2>
+            <p>jamacadani waa mid heer caalam ah waxayna ku fidsantahay guu ahaan geeska africa waxay bixisaa culuun kala duwan oo waxtar uleh bulshada jaamacadu waa mid la jaan qaaday casriga technology ga ee dunidu ku talaabsatay</p>
+        </div>
+        <div class="about-box">
+            <h2>CULUUNTA JAAMACADA</h2>
+            <p>culuunta aad ka helayso jaamacani waa ku wuwo badan waxana kamida<br>accounting<br>human resource management<br>public administration<br>health science like clinical nurse </p>
+        </div>
+        <div class="about-box">
+            <h2>HADAFKA JAAMACADA</h2>
+            <p>hadafka  jamacadu waa in ay soo saarto jiil tayaysan oo ku hubaysan waxbarasho si looga boxo jahliga daashaday bulshada </p>
+        </div>
     </div>
-   </div> 
 </body>
 </html>
