--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
                 <img src="phone.png" alt="Phone Icon">  </div>
             <div class="contact-details">
                 <h3>Phone</h3>
-                <p>+251 912 345 678</p>
+                <p>+251 928003838</p>
             </div>
         </div>
         <div class="contact-box">
@@ -22,7 +22,7 @@
             </div>
             <div class="contact-details">
                 <h3>Email</h3>
-                <p>your.email@gmail.com</p>
+                <p>deeqidil@gmail.com</p>
             </div>
         </div>
         <div class="contact-box">
@@ -31,7 +31,7 @@
             </div>
             <div class="contact-details">
                 <h3>Facebook</h3>
-                <p><a href="https://www.facebook.com/yourprofile" target="_blank">Your Facebook Profile</a></p>
+                <p><a href="https://www.facebook.com/deeq.darajo.3950" target="_blank">Your Facebook Profile</a></p>
             </div>
         </div>
         </div>
