--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Student Exam Results. All rights reserved.</p>
+        <p>&copy; 2025/2017E.C. Student Exam Results. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
